--- a/index.html
+++ b/index.html
@@ -2,12 +2,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JMC</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>TITULO</h1> 
-   <p>holaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholahola</p>
-   <p>holaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholahola</p>
-   <p>holaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholaholahola</p>
+   <header class="header1">
+    <p>UGENA, TOLEDO PIDE TU PRESUPUESTO SIGUENOS:INSTAGRAM</p>
+  </header>
+
+   <header class="header2">
+    <h2>JMC</h2>
+  </header>
+
+    <img src="foto casa minimalista.jpg" alt="" width="460" height="345">
+ 
+<titulo1>
+    <h1>Empresa de Reformas en Madrid |  JMC</h1>
+</titulo1>
+<texto1>
+   <p>En Dieciseis24 nos hemos alzado como una de las mejores empresas constructoras de Madrid. Pero no solo en Madrid capital, sino también en ciudades y poblaciones de la periferia.
+
+    Elaboramos numerosos proyectos que están relacionados con todo el sector de la construcción y las reformas. Nuestro trabajo no se limita únicamente a hogares. Realizamos construcciones de locales comerciales y negocios, escuchamos a nuestros clientes para ofrecerles la mejor respuesta y solución gracias al gran equipo de arquitectos y profesionales de la construcción que gestionan cada proyecto en Dieciseis24.
+</p>
+</texto1>
+<titulo2>
+    <h2>LA MEJOR EMPRESA DE REFORMAS DE MADRID</h2>
+</titulo2>
+<texto2>
+    <p>
+    La profesionalidad, la tecnología y la competencia nos permiten realizar obras de remodelación de un nivel muy alto gracias a unas intervenciones oportunas y precisas. Nuestra empresa de reformas en Boadilla y en todo Madrid trabaja con materiales de la máxima calidad y se pueden distinguir por su funcionalidad y meticulosa atención en los detalles estéticos de la obra.
+
+Dieciseis24 aporta un gran equipo liderado y gestionado por arquitectos titulados con una extensa experiencia en el sector de las reformas y la construcción. Todos los clientes que han confiado en nuestra empresa han obtenido resultados excelentes en todo tipo de reformas que hemos realizado en la ciudad de Madrid y todas las localidades cercanas. Ponemos pasión a nuestros proyectos para conseguir ser una de las mejores empresas de reformas que existen actualmente en la Comunidad de Madrid.
+
+Realizamos la reforma de pisos, chalets, tiendas, garajes y locales en Madrid, y ofrecemos el mantenimiento que necesita cada caso. La asistencia técnica previa a la realización del trabajo es esencial para llevar a cabo una excelente reforma, y la realizamos con todos nuestros proyectos para asegurar la calidad esperada de una empresa como la nuestra.
+</p>
+</texto2>
+
+<footer>
+    <p>PODRAS VER EL RESULTADO DE LA OBRA ANTES DE REALIZARLA, INCREIBLE ¿NO? 
+    </p>
+    <P>
+        Nuestro estudio 3D realizará una recreación en 2D y 3D con las herramientas más vanguardistas para que pueda visualizar sus ideas con todo detalle antes convertirlas en realidad.</P>
+
+  </footer>
+
+  <h3 style="text-align: center;">QUE HACEMOS</h3>
+
+<div class="mosaico">
+    <img src="interior.jpg" alt="Imagen 1">
+    <img src="interior.jpg" alt="Imagen 2">
+    <img src="interior.jpg" alt="Imagen 3">
+</div>
+
+
 </body>
 </html>
