--- a/index.html
+++ b/index.html
@@ -4,20 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JMC - Empresa de Reformas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
 
     <!-- Barra de contacto inicial -->
     <header class="header-contacto">
-        <p>Ugena, Toledo | Solicita tu presupuesto | Síguenos en: <a href="#">Instagram</a> | <a href="#">TikTok</a></p>
+        <p> Síguenos en: <a href="#">Instagram</a> | <a href="#">TikTok</a></p>
     </header>
 
-    <!-- Encabezado principal -->
-    <header class="header-principal">
-        <img src="Logo_nasfi-removebg-preview.png" alt="logo_JMC">
-    </header>
 
+
+<!-- Encabezado sin el logo -->
+<header class="header-principal">
+    <img src="logo_JMC.png" alt="logo_JMC">
+    <div class="header-buttons">
+        <button type="button" class="header-button">Inicio</button>
+        <button type="button" class="header-button">Nosotros</button>
+        <button type="button" class="header-button">Nuestras obras</button>
+        <button type="button" class="header-button">Contacto</button>
+    </div>
+</header>
     <!-- Imagen principal -->
     <section class="hero">
         <img src="casa_papa.jpeg" alt="Casa Minimalista">
@@ -98,7 +105,7 @@
 <footer class="footer2">
     <div class="footer-content">
         <div class="footer-logo">
-            <img src="Logo_nasfi-removebg-preview.png" alt="Logo de la Empresa" class="footer-logo-img">
+            <img src="logo_JMC.png" alt="Logo de la Empresa" class="footer-logo-img">
         </div>
         <div class="footer-description">
             <p>Somos una empresa dedicada a ofrecer reformas y construcciones de calidad en Madrid y alrededores. Con un equipo profesional y comprometido, transformamos espacios para hacerlos más funcionales y modernos.</p>
@@ -120,6 +127,7 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="SCRIPTS/scripts.js"></script>
+
 </body>
 </html>
