--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <!-- Barra de contacto inicial -->
     <header class="header-contacto">
-        <p> Síguenos en: <a href="#">Instagram</a> | <a href="#">TikTok</a></p>
+        <p> Síguenos en: <a  href="https://www.instagram.com/"><img src="logo_insta.png" alt=""></a> | <a href="https://www.tiktok.com/es/">TikTok</a></p>
     </header>
 
 
 
 <!-- Encabezado sin el logo -->
 <header class="header-principal">
-    <img src="logo_JMC.png" alt="logo_JMC">
+    <img src="j.png" alt="logo_JMC">
     <div class="header-buttons">
         <button type="button" class="header-button">Inicio</button>
         <button type="button" class="header-button">Nosotros</button>
@@ -29,6 +29,8 @@
     <section class="hero">
         <img src="casa_papa.jpeg" alt="Casa Minimalista">
         <h2>Empresa de Construcción y Reformas | JMC</h2>
+        <button type="button">Cuéntanos tu proyecto</button>
+
     </section>
 
     <!-- Descripción de la empresa -->
