--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JMC - Empresa de Reformas</title>
     <link rel="stylesheet" href="CSS/style.css">
+    <!-- fuente roboto -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&display=swap">
+
+
 </head>
 <body>
 
     <!-- Barra de contacto inicial -->
     <header class="header-contacto">
-        <p> Síguenos en: <a  href="https://www.instagram.com/"><img src="logo_insta.png" alt=""></a> | <a href="https://www.tiktok.com/es/">TikTok</a></p>
+        <p> Síguenos en: <a  href="https://www.instagram.com/"><img src="logo_insta.png" alt=""></a>  <a href="https://www.tiktok.com/es/">TikTok</a></p>
     </header>
 
 
@@ -28,27 +33,31 @@
     <!-- Imagen principal -->
     <section class="hero">
         <img src="casa_papa.jpeg" alt="Casa Minimalista">
-        <h2>Empresa de Construcción y Reformas | JMC</h2>
+        <img src="casa_papa2.jpeg" class="img2" alt="Casa Minimalista">
+        <h2>Construcciñon de proyectos a medida</h2>
         <button type="button">Cuéntanos tu proyecto</button>
 
     </section>
 
     <!-- Descripción de la empresa -->
     <section class="descripcion">
-        <p>En JMC somos una de las mejores empresas constructoras en Madrid y sus alrededores. Realizamos proyectos de construcción y reformas para hogares y locales comerciales. Con nuestro equipo de arquitectos y profesionales, gestionamos cada proyecto con dedicación y compromiso para ofrecer soluciones óptimas a nuestros clientes.</p>
+        <p>En <span style="font-weight: bold; color: #ff935d;">JM Construcciones</span> nos enorgullece ser una de las <span style="font-weight: bold; color: #ff935d;">mejores empresas constructoras</span> de <span style="color: #ff935d;">Madrid</span> y sus alrededores. Especializados en <span style="font-weight: bold;">proyectos de construcción y reformas</span>, tanto para chalets exclusivos como para locales comerciales, nos comprometemos a transformar tus ideas en <span style="font-weight: bold; color: #ff935d;">realidades únicas</span>.</p><br>
+
+        <p>Contamos con un <span style="font-weight: bold;">equipo altamente cualificado</span> de arquitectos y profesionales que gestionan cada proyecto con <span style="font-weight: bold; color: #ff935d;">dedicación</span> y <span style="font-weight: bold; color: #ff935d;">compromiso</span>. Nuestra prioridad es ofrecer <span style="font-weight: bold; color: #ff935d;">soluciones personalizadas</span> que garanticen la máxima calidad y satisfacción para ti. Confía en nosotros para crear espacios que reflejen tu visión y estilo.</p>
+        
     </section>
 
        <!-- Sección de servicios -->
        <section class="servicios">
-        <h2>¿Qué necesitas?</h2>
+        <h2>¿Qué necesitas?</h2><br>
         <div class="servicios-imagen">
             <!-- Texto a la izquierda de la imagen -->
             <div class="texto">
                 <p><h3>¿NECESITAS UNA CONSTRUCTORA DE CASAS?</h3>
-                    Somos somos una constructora de casas, especializada en la construcción de viviendas para particulares y promotores de urbanizaciones.</p> <br>
+                    Somos una <span style="font-weight: bold;">constructora especializada</span> en la creación de viviendas de alta calidad para <span style="font-weight: bold;">particulares</span> y <span style="font-weight: bold;">promotores de urbanizaciones</span>.</p><br>
 
                 <p><h3>¿NECESITAS REFORMAR UN LOCAL?</h3>
-                    Actualizamos tu local para adaptarlo a nuevos usos, renovar su imagen o mejorar su eficiencia.</p>
+                    Si deseas renovar tu local comercial, nos especializamos en <span style= font-weight:bold>actualizar y modernizar espacios</span> para adaptarlos a nuevos usos, renovar su imagen o mejorar su eficiencia.</p>
             </div>
 
             <!-- Imagen en el centro -->
@@ -56,10 +65,14 @@
 
             <!-- Texto a la derecha de la imagen -->
             <div class="texto">
-                <p><h3>¿TU EMPRESA NECESITA SERVICIOS DE CONSTRUCCIÓN?</h3>
-                    Construimos naves industriales y ejecutamos servicios de mantenimiento y reparación.</p> <br>
+                <div class="office-renovation">
+                    <h3>¿QUIERES REMODELAR TU OFICINA?</h3>
+                    <p>
+                        Transformamos tu entorno de trabajo en un espacio <span style="font-weight: bold;">cómodo</span>, <span style="font-weight: bold;">accesible</span><span> y <span style="font-weight: bold;">agradable</span><span> que potencia la productividad y mejora la experiencia de todos.
+                    </p><br>
+                </div>
                 <p><h3>¿NECESITAR UNA REFORMA EN UN TIEMPO RÉCORD?</h3>
-                    Optimizamos los tiempos para que tu reforma esté lista cuando antes, evitando interrumpir la actividad de su inmueble en la medida de lo posible.</p>
+                    Optimizamos los tiempos para que tu reforma esté lista <span style="font-weight: bold;">cuando antes</span>, evitando interrumpir la actividad de su inmueble en la medida de lo posible.</p>
             </div>
         </div>
     </section><br>
