--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     </header>
 
 
-
 <!-- Encabezado sin el logo -->
 <header class="header-principal">
     <img src="j.png" alt="logo_JMC">
@@ -34,54 +33,66 @@
     <section class="hero">
         <img src="casa_papa.jpeg" alt="Casa Minimalista">
         <img src="casa_papa2.jpeg" class="img2" alt="Casa Minimalista">
-        <h2>Construcciñon de proyectos a medida</h2>
-        <button type="button">Cuéntanos tu proyecto</button>
-
+        <h2>Construcción y reformas a medida</h2>
+        <div class="divider"></div>  <!-- Línea fina entre el título y el botón -->
+        <button id="hero-button">Cuéntanos Tu Proyecto</button>
     </section>
+   
 
-    <!-- Descripción de la empresa -->
+
+   
+
+    <!-- Descripción de la empresa 
     <section class="descripcion">
         <p>En <span style="font-weight: bold; color: #ff935d;">JM Construcciones</span> nos enorgullece ser una de las <span style="font-weight: bold; color: #ff935d;">mejores empresas constructoras</span> de <span style="color: #ff935d;">Madrid</span> y sus alrededores. Especializados en <span style="font-weight: bold;">proyectos de construcción y reformas</span>, tanto para chalets exclusivos como para locales comerciales, nos comprometemos a transformar tus ideas en <span style="font-weight: bold; color: #ff935d;">realidades únicas</span>.</p><br>
 
         <p>Contamos con un <span style="font-weight: bold;">equipo altamente cualificado</span> de arquitectos y profesionales que gestionan cada proyecto con <span style="font-weight: bold; color: #ff935d;">dedicación</span> y <span style="font-weight: bold; color: #ff935d;">compromiso</span>. Nuestra prioridad es ofrecer <span style="font-weight: bold; color: #ff935d;">soluciones personalizadas</span> que garanticen la máxima calidad y satisfacción para ti. Confía en nosotros para crear espacios que reflejen tu visión y estilo.</p>
         
-    </section>
+    </section> -->
 
        <!-- Sección de servicios -->
        <section class="servicios">
-        <h2>¿Qué necesitas?</h2><br>
+        <h2>¿Qué Necesitas?</h2><br>
         <div class="servicios-imagen">
             <!-- Texto a la izquierda de la imagen -->
             <div class="texto">
                 <p><h3>¿NECESITAS UNA CONSTRUCTORA DE CASAS?</h3>
+                    <div class="divider"></div>  <!-- Línea fina entre el título y el botón -->
                     Somos una <span style="font-weight: bold;">constructora especializada</span> en la creación de viviendas de alta calidad para <span style="font-weight: bold;">particulares</span> y <span style="font-weight: bold;">promotores de urbanizaciones</span>.</p><br>
 
                 <p><h3>¿NECESITAS REFORMAR UN LOCAL?</h3>
+                    <div class="divider"></div>  <!-- Línea fina entre el título y el botón -->
                     Si deseas renovar tu local comercial, nos especializamos en <span style= font-weight:bold>actualizar y modernizar espacios</span> para adaptarlos a nuevos usos, renovar su imagen o mejorar su eficiencia.</p>
             </div>
 
             <!-- Imagen en el centro -->
-            <img src="foto_preciom2.png" alt="Precios por m²">
+            <img src="115 m2.png" alt="Precio por m²">
 
             <!-- Texto a la derecha de la imagen -->
             <div class="texto">
                 <div class="office-renovation">
                     <h3>¿QUIERES REMODELAR TU OFICINA?</h3>
+                    <div class="divider"></div>  <!-- Línea fina entre el título y el botón -->
                     <p>
                         Transformamos tu entorno de trabajo en un espacio <span style="font-weight: bold;">cómodo</span>, <span style="font-weight: bold;">accesible</span><span> y <span style="font-weight: bold;">agradable</span><span> que potencia la productividad y mejora la experiencia de todos.
                     </p><br>
                 </div>
                 <p><h3>¿NECESITAR UNA REFORMA EN UN TIEMPO RÉCORD?</h3>
+                    <div class="divider"></div>  <!-- Línea fina entre el título y el botón -->
                     Optimizamos los tiempos para que tu reforma esté lista <span style="font-weight: bold;">cuando antes</span>, evitando interrumpir la actividad de su inmueble en la medida de lo posible.</p>
             </div>
         </div>
-    </section><br>
+    </section>
 
     <!-- Sección de información adicional -->
     <section class="informacion">
-        <h2>La Mejor Empresa de Reformas en Madrid</h2>
-        <p>Con profesionalismo y tecnología de punta, realizamos reformas en Madrid y sus alrededores. Trabajamos con materiales de alta calidad, cuidando cada detalle estético. Nuestro equipo de arquitectos cuenta con amplia experiencia, y cada proyecto se ejecuta con precisión y pasión.</p>
-    </section>
+        <div class="informacion-texto">
+        <h2>Excelencia en Diseño y Ejecución</h2>
+        <p>Incorporamos lo último en tecnología de domótica para una vida inteligente y conectada, adaptando cada proyecto a las necesidades de nuestros clientes.</p></div>
+    
+      <!-- Imagen a la derecha -->
+      <img src="plano_JM.png" alt="Plano_JM">
+    </section><br> 
 
     <!-- Footer con información adicional -->
     <footer class="footer">
@@ -120,10 +131,10 @@
 <footer class="footer2">
     <div class="footer-content">
         <div class="footer-logo">
-            <img src="logo_JMC.png" alt="Logo de la Empresa" class="footer-logo-img">
+            <img src="Logo_JM.png" alt="Logo de la Empresa" class="footer-logo-img">
         </div>
         <div class="footer-description">
-            <p>Somos una empresa dedicada a ofrecer reformas y construcciones de calidad en Madrid y alrededores. Con un equipo profesional y comprometido, transformamos espacios para hacerlos más funcionales y modernos.</p>
+            <p>Somos una empresa dedicada a ofrecer reformas y construcciones de calidad en Madrid Toledo y alrededores. Con un equipo profesional y comprometido, transformamos espacios para hacerlos más funcionales y modernos.</p>
         </div>
         <div class="footer-contact">
             <h3>Contacto</h3>
